--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <td class="col">
                 <h1 float="left">Jayesh Paliwal</h1>
 
-                <p>Pursuing B.tech(CSE) from <strong> <a href="https://www.lpu.in/" target="_blank">Lovely Professional University</a></strong></p>
+                <p>Pursuing B.tech(CSE) from LPU(Lovely Professional inversity) <strong> <a href="https://www.lpu.in/" target="_blank">Lovely Professional University</a></strong></p>
             </td>
         </tr>
     </table>
@@ -38,7 +38,7 @@
     <h3>My Projects</h3>
     <ol>
         <li><a href="http://jdeveloper.unaux.com/">Minimalistic Website</a></li>
-        <li>Supermarket Billing System</li>
+        <li>Supermarket Mall Like Billing System</li>
     </ol>
     <hr>
     <H3>SKILLS</H3>
